tools/flowc/tests/errors/while.flow
foo() {
	while(true) {
		1
	}
}